Board is now rendered in board.js instead of in index.html. Fixed css related to tiles with numbers being shifted down

--- a/css/base.less
+++ b/css/base.less
@@ -34,6 +34,7 @@ table {
 	-moz-border-radius: 15px;
 
 	text-align: center;
+	vertical-align: top;
 	line-height: 90px;
 
 	color: #fff;
